Rogue trailing comma in package.json.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "publish": "npm run minify && git push origin && git push origin --tags",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
-    "release:major": "npm version major && npm publish",
-
+    "release:major": "npm version major && npm publish"
   }
 }
