--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "server",
     "client"
   ],
-  "contributors": ["Jake Gordon <jake@codeincomplete.com>"],
+  "contributors": [
+    "Jake Gordon <jake@codeincomplete.com>"
+  ],
   "author": "Steven Black <steveb@stevenblack.com>",
   "repository": {
     "type": "git",
@@ -24,7 +26,7 @@
     "qunit": "~0.9.1",
     "uglify-js": "^2.7.4"
   },
-  "version": "2.5.3",
+  "version": "2.5.4",
   "scripts": {
     "start": "ws --rewrite '/test -> /test/'",
     "test": "node test/runner",
