Reset package.json.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "server",
     "client"
   ],
+  "author": "Jake Gordon <jake@codeincomplete.com>",
   "contributors": [
-    "Jake Gordon <jake@codeincomplete.com>"
+    "Steven Black <steveb@stevenblack.com>"
   ],
-  "author": "Steven Black <steveb@stevenblack.com>",
   "repository": {
     "type": "git",
     "url": "git://github.com/stevenblack/javascript-state-machine.git"
